<package>
  <name>vrep_common</name>
  <version>3.1.1</version>
  <description>vrep_common</description>
  <maintainer email="info@coppeliarobotics.com">marc</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/vrep_common</url>
  <!-- <url type="bugtracker"></url> -->

  <author>marc</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <!-- <build_depend>opencv2</build_depend> -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- <run_depend>opencv2</run_depend> -->

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->

</package>