<package>
  <name>vrep_plugin</name>
  <version>3.1.1</version>
  <description>vrep_plugin</description>
  <maintainer email="info@coppeliarobotics.com">marc</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/vrep_plugin</url>
  <!-- <url type="bugtracker"></url> -->

  <author>marc</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>vrep_common</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>vrep_common</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

</package>